--- a/deposit.Rmd
+++ b/deposit.Rmd
@@ -76,4 +76,23 @@ print(loanData)
 
 ```
 
+loan_default_update
+```{r}
+loanData <- data.frame(loanID = c(1,2), loanType = c(1,2), loanValue = c(1000,2000), durationToMaturity = c(2,3), loan_risk = c(0.03,0.05))
+
+
+loan_default_update <- function() {
+  for (i in 1:nrow(loanData)) {
+    risk <- loanData$loan_risk[i]/12
+    if (runif(1) < risk) {
+      loanData$loanValue[i] <- 0
+    }
+  }
+  return(loanData)
+}
+
+loan_default_update()
+loanData
+```
+
 
